--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*  HEADER  */
+
 .header{
     width: 100vw;
     height: 30vh;
@@ -9,20 +11,17 @@
     object-fit: cover; 
 }
 
-.div{
-    border: 2px solid orange;
-    background-color: orange;
-    height: 15vh;
+/*  SEARCH  */
+
+.search-container{
+    background-color: white;
+    transform: translate(15vw, -5vh);
+    width: 68vw;
+    height: 10vh;
     display: flex;
-    flex-direction: row;
     justify-content: center;
-}
-
-
-
-
-.form{
-    
+    align-items: center;
+    box-shadow: 0px 10px 5px 0px rgba(219,219,219,1);
 }
 
 .input{
@@ -33,33 +32,66 @@
 }
 
 .button{
-    background-color: orange;
-    color: white;
-    border: none;
-    padding: 8px 15px 8px 15px;
-    font-size: 18px;
+   background-color: orange;
+   border: none;
+   color: white;
+   margin-left: 20px;
+   padding: 10px 10px 10px 10px;
+}
+
+/*  CARDS  */
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 0 0 0;
+}
+
+.main-content-title {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 28px;
+    color: rgb(193, 128, 8);
+    margin-bottom: 21px;
+}
+
+.character-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 64vw;
 }
 
 .card{
     border: 2px solid orange;
-    width: 20vw;
-    height: 40vh;
+    width: 12vw;
+    height: 32vh;
+    margin: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 15px 25px 0px 25px;
 }
 
 .card-image{
-    width: 12vw;
+    width: 10vw;
     height: 24vh;
     object-fit: cover;
 }
 
 .card-name{
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    padding-top: 10px;
 }
 
 .card-life{
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    padding-top: 10px;
 }
