--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,33 @@
     grid-template-columns: 30vw 70vw;
 }
 
+.main-content-fav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-content-title {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 28px;
+    color: rgb(193, 128, 8);
+    margin-bottom: 21px;
+}
+
+.reset{
+    background-color: orange;
+    border: none;
+    color: white;
+    padding: 10px 10px 10px 10px;   
+}
+
 .favourites-characters{
     background-color: rgb(255, 233, 192);
     display: grid;
     grid-template-columns: 50% 50%;
     margin-left: 21px;
+    margin-top: 21px;
+    height: 42.5vh;
 }
 
 .main-content {
@@ -59,14 +81,6 @@
     align-items: center;
     flex-direction: column;
     margin: 0 0 0 0;
-}
-
-.main-content-title {
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 28px;
-    color: rgb(193, 128, 8);
-    margin-bottom: 21px;
 }
 
 .character-container {
@@ -80,7 +94,7 @@
 .card{
     border: 2px solid orange;
     width: 12vw;
-    height: 32vh;
+    height: 38vh;
     margin: 5px;
     display: flex;
     flex-direction: column;
@@ -91,7 +105,7 @@
 
 .card-image{
     width: 10vw;
-    height: 24vh;
+    height: 28vh;
     object-fit: cover;
 }
 
